<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.VenueFragment"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/venue"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/venue_address"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/venueMapView"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/colorSeparator"
            android:layout_height="240dp" />

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/party_venue"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/party_venue_address"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/partyVenueMapView"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorSeparator"
            android:layout_height="240dp" />

    </LinearLayout>
</ScrollView>